--- a/authorizer-app/src/app/app.component.html
+++ b/authorizer-app/src/app/app.component.html
@@ -8,15 +8,7 @@
     <router-outlet></router-outlet>
   </div>
   <footer class="footer">
-    <div>{{ 'title' | translate }} | version: {{ version }}. </div>
-    <div>
-      <span>Powered by </span>
-      <a href="https://radar-base.org/" target="_blank">RADAR-base</a>
-      <span> | </span>
-      <a class="github-link" href="https://github.com/RADAR-base/" target="_blank">
-        <img class="github-logo" src="assets/images/GitHub-Mark-120px-plus.png" alt="Github logo">
-      </a>
-    </div>
+    {{ 'title' | translate }} | Powered by <a href="https://radar-base.org/" target="_blank">RADAR-base</a>
   </footer>
 </ng-container>
 
