--- a/authorizer-app/src/app/shared/components/message-box/message-box.component.html
+++ b/authorizer-app/src/app/shared/components/message-box/message-box.component.html
@@ -1,7 +1,3 @@
-<div *ngIf="message"
-     class="message-box"
-     [ngClass]="type"
->
-  <p>{{ messageString }}</p>
-  <p *ngIf="showSupport">{{ 'SHARED.ERROR.supportMessage' | translate }}</p>
+<div class="message-box" [ngClass]="type">
+  <ng-content></ng-content>
 </div>
