--- a/authorizer-app/src/app/admin/components/users-list/users-list.component.html
+++ b/authorizer-app/src/app/admin/components/users-list/users-list.component.html
@@ -1,4 +1,7 @@
-<app-message *ngIf="error" [message]="error"></app-message>
+<app-message *ngIf="error">
+  {{error | translate}}
+</app-message>
+
 <div class="container" >
   <div class="filter-container">
     <ng-container *ngTemplateOutlet="filtersContainer"></ng-container>
@@ -17,60 +20,85 @@
            aria-label="Users List">
 
       <ng-container matColumnDef="userId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="m-w-150 ellipsis">{{'ADMIN.GENERAL.userId' | translate}}</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="m-w-150 ellipsis">
+          {{'ADMIN.GENERAL.userId' | translate}}
+        </th>
         <td mat-cell *matCellDef="let user" class="m-w-150 ellipsis">
-          {{user.userId}}
+          {{user['userId']}}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="externalId" class="m-w-100 ellipsis">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="m-hide m-w-100 ellipsis">{{'ADMIN.GENERAL.externalId' | translate}}</th>
-        <td mat-cell *matCellDef="let user" class="m-hide m-w-100 ellipsis"> {{user.externalId}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="sourceType" class="m-w-100 ellipsis">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="m-hide m-w-100 ellipsis">{{'ADMIN.GENERAL.sourceType' | translate}}</th>
-        <td mat-cell *matCellDef="let user" class="m-hide m-w-100 ellipsis"> {{user.sourceType}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="m-hide m-w-100 ellipsis">
+          {{'ADMIN.GENERAL.externalId' | translate}}
+        </th>
+        <td mat-cell *matCellDef="let user" class="m-hide m-w-100 ellipsis">
+          {{user['externalId']}}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="startDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="t-hide">{{'ADMIN.GENERAL.startDate' | translate}}</th>
-        <td mat-cell *matCellDef="let user" class="t-hide"> {{(user.startDate | date:'dd/MM/y') || '-'}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="t-hide">
+          {{'ADMIN.GENERAL.startDate' | translate}}
+        </th>
+        <td mat-cell *matCellDef="let user" class="t-hide">
+          {{(user['startDate'] | date:'shortDate' : undefined : locale) || '-'}}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="endDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="t-hide">{{'ADMIN.GENERAL.endDate' | translate}}</th>
-        <td mat-cell *matCellDef="let user" class="t-hide"> {{(user.endDate | date:'dd/MM/y') || '-'}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="t-hide">
+          {{'ADMIN.GENERAL.endDate' | translate}}
+        </th>
+        <td mat-cell *matCellDef="let user" class="t-hide">
+          {{(user['endDate'] | date:'shortDate' : undefined : locale) || '-' }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="isAuthorized">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="m-hide m-w-220">{{'ADMIN.GENERAL.authorized' | translate}}</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="m-hide m-w-220">
+          {{'ADMIN.GENERAL.authorized' | translate}}
+        </th>
         <td mat-cell *matCellDef="let user" class="m-hide m-w-220">
-          <span *ngIf="user.isAuthorized" class="tag tag-success">
-            {{ 'ADMIN.GENERAL.yes' | translate }}
+          <span *ngIf="user['isAuthorized']" class="tag tag-success">
+            {{ 'ADMIN.USERS_LIST.authorizationStatus.yes' | translate }}
           </span>
-          <span *ngIf="!user.isAuthorized && user.registrationCreatedAt" class="tag tag-info">
-            {{ 'ADMIN.GENERAL.pending' | translate }} ({{user.registrationCreatedAt | date:'dd/MM/y HH:mm:ss'}})
+          <span *ngIf="!user['isAuthorized'] && user['registrationCreatedAt']" class="tag tag-info">
+            {{ 'ADMIN.USERS_LIST.authorizationStatus.pending' | translate }}
           </span>
-          <span *ngIf="!user.isAuthorized && !user.registrationCreatedAt && user.id" class="tag tag-error">
-            {{ 'ADMIN.GENERAL.no' | translate }}
+          <span *ngIf="!user['isAuthorized'] && !user['registrationCreatedAt'] && user.id" class="tag tag-error">
+            {{ 'ADMIN.USERS_LIST.authorizationStatus.no' | translate }}
           </span>
-          <span *ngIf="!user.isAuthorized && !user.registrationCreatedAt && !user.id" class="tag tag-warn">
-            {{ 'ADMIN.GENERAL.unset' | translate }}
+          <span *ngIf="!user['isAuthorized'] && !user['registrationCreatedAt'] && !user.id" class="tag tag-warn">
+            {{ 'ADMIN.USERS_LIST.authorizationStatus.unset' | translate }}
           </span>
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="registrationCreatedAt">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="t-hide">
+          {{'ADMIN.GENERAL.registrationCreatedAt' | translate}}
+        </th>
+        <td mat-cell *matCellDef="let user" class="t-hide">
+          {{(user['registrationCreatedAt'] | date:'short' : undefined : locale) || '-'}}
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef style="text-align: end; width:80px;">{{'ADMIN.USERS_LIST.actions' | translate}}</th>
-        <td mat-cell *matCellDef="let user" style="text-align: end; width:80px;">
-          <button  mat-icon-button color="primary" (click)="openSubjectDialog('edit', user)">
-            <mat-icon>edit</mat-icon>
+        <th mat-header-cell *matHeaderCellDef class="action-column">
+          {{'ADMIN.USERS_LIST.actions' | translate}}
+        </th>
+        <td mat-cell *matCellDef="let user" class="action-column">
+          <button *ngIf="user['isAuthorized']" mat-icon-button color="primary"
+                  (click)="onActionClick(UserDialogMode.EDIT, user)">
+            <mat-icon>update</mat-icon>
           </button>
-          <button *ngIf="!user.isAuthorized" mat-icon-button color="primary" (click)="openSubjectDialog('edit', user)">
+          <button *ngIf="!user['isAuthorized']" mat-icon-button color="primary"
+                  (click)="onActionClick(UserDialogMode.ADD, user)">
             <mat-icon>add_link</mat-icon>
           </button>
-            <button *ngIf="user.isAuthorized" mat-icon-button color="warn" (click)="openSubjectDialog('delete', user)" >
+          <button *ngIf="user['isAuthorized']" mat-icon-button color="warn"
+                  (click)="onActionClick(UserDialogMode.DELETE, user)">
             <mat-icon>link_off</mat-icon>
           </button>
         </td>
@@ -81,11 +109,13 @@
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="8">{{'ADMIN.USERS_LIST.noData' | translate}}</td>
+        <td class="mat-cell" colspan="7">
+          {{'ADMIN.USERS_LIST.noData' | translate}}
+        </td>
       </tr>
     </table>
   </div>
-  <mat-paginator [pageSize]="5" [pageSizeOptions]="[2, 5, 10]" aria-label="Select page of users"></mat-paginator>
+  <mat-paginator [pageSize]="50" [pageSizeOptions]="[20, 50, 100]" aria-label="Select page of users"></mat-paginator>
 </div>
 
 <ng-template #filtersContainer>
@@ -112,6 +142,7 @@
   <button mat-raised-button
           color="warn"
           class="reset-filters"
+          [disabled]="!filterEnabled"
           (click)="resetFilters()">
     {{'ADMIN.USERS_LIST.filters.clearFilters' | translate}}
   </button>
