--- a/authorizer-app/src/app/app.component.scss
+++ b/authorizer-app/src/app/app.component.scss
@@ -3,36 +3,12 @@
 }
 
 .footer {
-  display: flex;
   align-items: center;
-  flex-wrap: wrap;
   padding: 8px 16px;
   background-color: #eee;
   text-align: center;
   font-size: 12px;
-  > div {
-    flex-shrink: 0;
-    width: 100%;
-    a.github-link{
-      vertical-align: middle;
-    }
+  a, a:visited, a:hover{
+    color: #1E90FF;
   }
-
-}
-
-.github-logo {
-  width: 16px;
-}
-
-.loader-container {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  background: rgba(255,255,255,0.5);
-  z-index: 1;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  flex-direction: column;
 }
