--- a/authorizer-app/src/app/shared/containers/authorization-complete-page/authorization-complete-page.component.html
+++ b/authorizer-app/src/app/shared/containers/authorization-complete-page/authorization-complete-page.component.html
@@ -1,23 +1,31 @@
-<div class="container">
+<div *ngIf="isLoading" class="loader-container">
+  <mat-spinner diameter="30"></mat-spinner>
+  <div><p>{{ 'loading' | translate }} ...</p></div>
+</div>
+
+<div *ngIf="!isLoading" class="card-container">
   <mat-card>
-    <mat-card-header>
-      <mat-card-title *ngIf="!error && !loading">{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.title' | translate }}</mat-card-title>
-      <mat-card-title *ngIf="error && !loading">{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.errorTitle' | translate }}</mat-card-title>
-      <mat-card-subtitle *ngIf="!error && !loading">{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.subtitle' | translate }}</mat-card-subtitle>
+
+    <mat-card-header *ngIf="!error">
+      <mat-card-title>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.title' | translate:{sourceType: sourceType, project: project} }}</mat-card-title>
+      <mat-card-subtitle>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.subtitle' | translate:{sourceType: sourceType, project: project} }}</mat-card-subtitle>
     </mat-card-header>
+    <mat-card-header *ngIf="error">
+      <mat-card-title>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.ERROR.title' | translate }}</mat-card-title>
+      <mat-card-subtitle>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.ERROR.subtitle' | translate }}</mat-card-subtitle>
+    </mat-card-header>
+
     <mat-card-content>
-      <div *ngIf="loading" class="loader-container">
-        <mat-spinner diameter="30"></mat-spinner>
-      </div>
-      <app-message *ngIf="error && !loading" [message]="error"></app-message>
-      <div *ngIf="!error && !loading">
-        <p>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.description' | translate }}</p>
+
+      <app-message *ngIf="error">
+        {{'SHARED.AUTHORIZATION_COMPLETE_PAGE.ERROR.contactSupport' | translate}}
+        <br/><br/>
+        {{error | translate}}
+      </app-message>
+
+      <div *ngIf="!error">
+        <p>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.description' | translate:{sourceType: sourceType, project: project} }}</p>
         <p>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.actionMessage' | translate }}</p>
-        <div>
-          <button mat-raised-button color="primary" (click)="redirect()">
-            {{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.actionButton' | translate }}
-          </button>
-        </div>
       </div>
     </mat-card-content>
   </mat-card>
