--- a/authorizer-app/src/styles.scss
+++ b/authorizer-app/src/styles.scss
@@ -1,9 +1,66 @@
 /* You can add global styles to this file, and also import other style files */
-//@import "~bootstrap/dist/css/bootstrap.css";
-//@import "~font-awesome/css/font-awesome.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 html, body { font-family: Roboto, Arial, sans-serif; width: 100%; height: 100%; margin: 0; background-color: aliceblue; font-size: 14px;}
+
+.loader-container {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  background: rgba(255,255,255,0.5);
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  flex-direction: column;
+}
+
+.container{
+  padding: 16px;
+}
+
+.card-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 100px);
+  text-align: center;
+  mat-card {
+    box-sizing: border-box;
+    width: 400px;
+  }
+
+  mat-card-header{
+    justify-content: center;
+    text-align: center;
+  }
+
+  mat-card-content{
+    text-align: center;
+  }
+
+  .loader-container {
+    width: 100%;
+    display: flex;
+    background: rgba(255,255,255,0.5);
+    z-index: 1;
+    justify-content: center;
+  }
+
+  @media only screen and (max-width: 1200px){
+    /* [320px -> 1200px] */
+    mat-card {
+      width: calc(100% - 32px);
+    }
+  }
+}
+
+
+.full-width {
+  width: 100%;
+}
 
 .cdk-global-overlay-wrapper {
   display: flex;
@@ -14,46 +71,30 @@ html, body { font-family: Roboto, Arial, sans-serif; width: 100%; height: 100%; 
 }
 
 @media only screen and (max-width: 600px) {
-  .full-width-dialog { // .mat-dialog-container {
+  .full-width-dialog {
     max-width: calc(100vw - 16px) !important;
   }
+
   .mat-dialog-container {
     padding: 8px !important;
 
   }
+
   .mat-dialog-content {
     padding: 0 8px !important;
     margin: 0 -8px !important;
   }
+
   .mat-dialog-title p{
     font-size: 14px;
   }
-  //.mat-dialog-actions {
-  //  margin-bottom: 0 !important; //-24px;
-    .action-buttons-container div{
-      display: flex;
-      flex-direction: column;
-      button {
-        margin-bottom: 8px;
-        margin-left: 0; //8px;
-      }
-    }
-  //}
-}
 
-//.mat-cell {
-//  align-content: start !important;
-//  text-align: start !important;
-//}
-//.mat-header-cell {
-//  align-content: start !important;
-//  text-align: start !important;
-//}
-//
-//.page-container{
-//  padding: 1em;
-//}
-//
-//.users-container{
-//  margin-top:3em;
-//}
+  .action-buttons-container div{
+    display: flex;
+    flex-direction: column;
+    button {
+      margin-bottom: 8px;
+      margin-left: 0;
+    }
+  }
+}
