--- a/authorizer-app/src/app/shared/components/toolbar/toolbar.component.html
+++ b/authorizer-app/src/app/shared/components/toolbar/toolbar.component.html
@@ -15,7 +15,8 @@
               aria-label="Language button with a menu"
       >
         <mat-icon>language</mat-icon>
-        <span class="uppercase">{{translate.currentLang}}</span>
+        <span class="uppercase">{{currentLanguage}}</span>
+        <mat-icon>arrow_drop_down</mat-icon>
       </button>
 
       <mat-menu #languageMenu="matMenu">
