--- a/authorizer-app/src/app/shared/containers/authorization-complete-page/authorization-complete-page.component.html
+++ b/authorizer-app/src/app/shared/containers/authorization-complete-page/authorization-complete-page.component.html
@@ -1,18 +1,28 @@
 <div *ngIf="isLoading" class="loader-container">
   <mat-spinner diameter="30"></mat-spinner>
-  <div><p>{{ 'loading' | translate }} ...</p></div>
+  <p>{{ 'loading' | translate }} ...</p>
 </div>
 
 <div *ngIf="!isLoading" class="card-container">
   <mat-card>
 
     <mat-card-header *ngIf="!error">
-      <mat-card-title>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.title' | translate:{sourceType: sourceType, project: project} }}</mat-card-title>
-      <mat-card-subtitle>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.subtitle' | translate:{sourceType: sourceType, project: project} }}</mat-card-subtitle>
+      <mat-card-title>
+        {{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.title' | translate:
+        {sourceType: sourceType, project: project} }}
+      </mat-card-title>
+      <mat-card-subtitle>
+        {{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.subtitle' | translate:
+        {sourceType: sourceType, project: project} }}
+      </mat-card-subtitle>
     </mat-card-header>
     <mat-card-header *ngIf="error">
-      <mat-card-title>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.ERROR.title' | translate }}</mat-card-title>
-      <mat-card-subtitle>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.ERROR.subtitle' | translate }}</mat-card-subtitle>
+      <mat-card-title>
+        {{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.ERROR.title' | translate }}
+      </mat-card-title>
+      <mat-card-subtitle>
+        {{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.ERROR.subtitle' | translate }}
+      </mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content>
@@ -24,8 +34,13 @@
       </app-message>
 
       <div *ngIf="!error">
-        <p>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.description' | translate:{sourceType: sourceType, project: project} }}</p>
-        <p>{{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.actionMessage' | translate }}</p>
+        <p>
+          {{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.description' | translate:
+          {sourceType: sourceType, project: project} }}
+        </p>
+        <p>
+          {{ 'SHARED.AUTHORIZATION_COMPLETE_PAGE.actionMessage' | translate }}
+        </p>
       </div>
     </mat-card-content>
   </mat-card>
