--- a/authorizer-app/src/styles.scss
+++ b/authorizer-app/src/styles.scss
@@ -71,6 +71,8 @@ html, body { font-family: Roboto, Arial, sans-serif; width: 100%; height: 100%; 
 }
 
 @media only screen and (max-width: 600px) {
+  /* [320px -> 600px] */
+
   .full-width-dialog {
     max-width: calc(100vw - 16px) !important;
   }
