--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
@@ -66,7 +66,7 @@
       <td mat-cell *matCellDef="let user"> {{user.endDate | date}} </td>
     </ng-container>authorized
     <ng-container matColumnDef="authorized">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Authorized? </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Authorized </th>
       <td mat-cell *matCellDef="let user">
         <ng-container *ngIf="user.isAuthorized">Yes</ng-container>
         <ng-container *ngIf="!user.isAuthorized && user.registrationCreatedAt">Pending ({{user.registrationCreatedAt | date:'MMM d, y, HH:mm:ss'}})</ng-container>
