--- a/authorizer-app/src/styles.scss
+++ b/authorizer-app/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 
 html, body { font-family: Roboto, Arial, sans-serif; width: 100%; height: 100%; margin: 0; background-color: aliceblue; font-size: 14px;}
 
